# abdel-rust

./: Cargo.toml
PROJECT/src/: main.rs
homwork1/: Cargo.toml
homwork1/src/: book1.rs  fonctions.rs  if.rs  main.rs  primitive_types.rs  variables.rs
homwork2/: Cargo.toml
homwork2/src/: task1.rs  task2.rs
homwork3/: Cargo.toml
homwork3/src/: main.rs
